project(sensor_proto)

file(GLOB proto_srcs *.proto)
set(Protobuf_USE_STATIC_LIBS on)

protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${proto_srcs})

add_library(${PROJECT_NAME} STATIC ${PROTO_SRCS} ${PROTO_HDRS})
target_link_libraries(${PROJECT_NAME} ${PROTOBUF_LIBRARIES} ${PROTOBUF_PROTOC_LIBRARIES} pthread)

install(FILES ${proto_srcs} DESTINATION apollo/cyber/proto/sensor_proto/)
install(FILES ${PROTO_HDRS} DESTINATION apollo/cyber/include/cyber/sensor_proto/)